@@ -6,11 +6,13 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLEncoder;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.format.DateTimeParseException;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -18,24 +20,28 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import smithereen.ApplicationContext;
 import smithereen.Config;
-import smithereen.Utils;
 import smithereen.activitypub.objects.Actor;
 import smithereen.activitypub.objects.Image;
 import smithereen.activitypub.objects.LocalImage;
 import smithereen.activitypub.objects.PropertyValue;
 import smithereen.controllers.GroupsController;
+import smithereen.controllers.ObjectLinkResolver;
 import smithereen.exceptions.ObjectNotFoundException;
 import smithereen.exceptions.UserActionNotAllowedException;
+import smithereen.exceptions.UserErrorException;
 import smithereen.model.Account;
 import smithereen.model.ActorWithDescription;
 import smithereen.model.CommentViewType;
 import smithereen.model.ForeignGroup;
 import smithereen.model.Group;
-import smithereen.model.GroupAdmin;
+import smithereen.model.UserBanInfo;
+import smithereen.model.UserBanStatus;
+import smithereen.model.groups.GroupAdmin;
 import smithereen.model.ObfuscatedObjectIDType;
 import smithereen.model.PaginatedList;
 import smithereen.model.SessionInfo;
@@ -43,6 +49,13 @@ import smithereen.model.SizedImage;
 import smithereen.model.User;
 import smithereen.model.UserInteractions;
 import smithereen.model.WebDeltaResponse;
+import smithereen.model.board.BoardTopic;
+import smithereen.model.board.BoardTopicsSortOrder;
+import smithereen.model.groups.GroupBanInfo;
+import smithereen.model.groups.GroupBanStatus;
+import smithereen.model.groups.GroupFeatureState;
+import smithereen.model.groups.GroupLink;
+import smithereen.model.groups.GroupLinkParseResult;
 import smithereen.model.media.PhotoViewerInlineData;
 import smithereen.model.photos.Photo;
 import smithereen.model.photos.PhotoAlbum;
@@ -88,15 +101,18 @@ public class GroupsRoutes{
 	public static Object userGroups(Request req, Response resp, User user){
 		jsLangKey(req, "cancel", "create");
 		ApplicationContext ctx=context(req);
-		SessionInfo info=sessionInfo(req);
-		ctx.getPrivacyController().enforceUserProfileAccess(info!=null && info.account!=null ? info.account.user : null, user);
+		Account self=currentUserAccount(req);
+		ctx.getPrivacyController().enforceUserProfileAccess(self!=null ? self.user : null, user);
 		RenderedTemplateResponse model=new RenderedTemplateResponse("groups", req).with("tab", "groups").with("title", lang(req).get("groups"));
 		String query=req.queryParams("q");
 		model.with("query", query);
+		if(self==null || user.id!=self.user.id){
+			model.headerBack(user);
+		}
 		if(StringUtils.isNotEmpty(query))
-			model.paginate(ctx.getSearchController().searchGroups(info!=null && info.account!=null ? info.account.user : null, query, false, user, offset(req), 100));
+			model.paginate(ctx.getSearchController().searchGroups(self!=null ? self.user : null, query, false, user, offset(req), 100));
 		else
-			model.paginate(ctx.getGroupsController().getUserGroups(user, info!=null && info.account!=null ? info.account.user : null, offset(req), 100));
+			model.paginate(ctx.getGroupsController().getUserGroups(user, self!=null ? self.user : null, offset(req), 100));
 		model.with("owner", user);
 		if(isAjax(req)){
 			return new WebDeltaResponse(resp)
@@ -167,6 +183,8 @@ public class GroupsRoutes{
 
 			try{
 				Instant eventStart=instantFromDateAndTime(req, eventDate, eventTime);
+				if(eventStart.isBefore(Instant.now()) || !isWithinDatabaseLimits(eventStart))
+					throw new BadRequestException();
 				group=ctx.getGroupsController().createEvent(self.user, name, description, eventStart, null);
 			}catch(DateTimeParseException x){
 				throw new BadRequestException(x);
@@ -183,7 +201,7 @@ public class GroupsRoutes{
 	}
 
 	public static RenderedTemplateResponse groupProfile(Request req, Response resp, Group group){
-		SessionInfo info=Utils.sessionInfo(req);
+		SessionInfo info=sessionInfo(req);
 		@Nullable Account self=info!=null ? info.account : null;
 		ApplicationContext ctx=context(req);
 
@@ -198,66 +216,18 @@ public class GroupsRoutes{
 		if(membershipState!=Group.MembershipState.MEMBER && membershipState!=Group.MembershipState.TENTATIVE_MEMBER){
 			if(group.accessType==Group.AccessType.CLOSED){
 				canAccessContent=false;
-			}else if(group.accessType==Group.AccessType.PRIVATE){
-				throw new UserActionNotAllowedException(group.isEvent() ? "event_private_no_access" : "group_private_no_access");
 			}
 		}
 
 		Lang l=lang(req);
 		RenderedTemplateResponse model=new RenderedTemplateResponse("group", req);
 
-
-		// Public info: still visible for non-members in public groups
-		List<User> members=ctx.getGroupsController().getRandomMembersForProfile(group, false);
-		model.with("group", group).with("members", members);
-		if(group.isEvent())
-			model.with("tentativeMembers", ctx.getGroupsController().getRandomMembersForProfile(group, true));
-		model.with("title", group.name);
-		model.with("admins", ctx.getGroupsController().getAdmins(group));
-		model.with("canAccessContent", canAccessContent);
-
-		// Wall posts
-		int wallPostsCount=0;
-		if(canAccessContent){
-			int offset=offset(req);
-			PaginatedList<PostViewModel> wall=PostViewModel.wrap(ctx.getWallController().getWallPosts(self!=null ? self.user : null, group, false, offset, 20));
-			wallPostsCount=wall.total;
-			ctx.getWallController().populateReposts(self!=null ? self.user : null, wall.list, 2);
-			CommentViewType viewType=self!=null ? self.prefs.commentViewType : CommentViewType.THREADED;
-			if(req.attribute("mobile")==null){
-				ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, wall.list, viewType);
-			}
-			Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(wall.list, self!=null ? self.user : null);
-			model.with("postCount", wall.total)
-					.paginate(wall, "/groups/"+group.id+"/wall?offset=", null)
-					.with("canPostOnWall", self!=null)
-					.with("canSeeOthersPosts", true);
-			model.with("postInteractions", interactions);
-			HashSet<Integer> needUsers=new HashSet<>(), needGroups=new HashSet<>();
-			PostViewModel.collectActorIDs(wall.list, needUsers, needGroups);
-			model.with("users", ctx.getUsersController().getUsers(needUsers));
-			model.with("maxReplyDepth", PostRoutes.getMaxReplyDepth(self)).with("commentViewType", viewType);
-
-			PaginatedList<PhotoAlbum> albums;
-			if(isMobile(req))
-				albums=ctx.getPhotosController().getMostRecentAlbums(group, self!=null ? self.user : null, 1, true);
-			else
-				albums=ctx.getPhotosController().getRandomAlbumsForProfile(group, self!=null ? self.user : null, 2);
-			model.with("albums", albums.list)
-					.with("photoAlbumCount", albums.total)
-					.with("covers", ctx.getPhotosController().getPhotosIgnoringPrivacy(albums.list.stream().map(a->a.coverID).filter(id->id!=0).collect(Collectors.toSet())));
-		}
-
-		if(group instanceof ForeignGroup)
-			model.with("noindex", true);
-
-		jsLangKey(req, "yes", "no", "delete_post", "delete_post_confirm", "delete_reply", "delete_reply_confirm", "remove_friend", "cancel", "delete");
-		Templates.addJsLangForNewPostForm(req);
+		Group.AdminLevel adminLevel;
 		if(self!=null){
-			Group.AdminLevel level=ctx.getGroupsController().getMemberAdminLevel(group, self.user);
+			adminLevel=ctx.getGroupsController().getMemberAdminLevel(group, self.user);
 			model.with("membershipState", membershipState);
-			model.with("groupAdminLevel", level);
-			if(level.isAtLeast(Group.AdminLevel.ADMIN)){
+			model.with("groupAdminLevel", adminLevel);
+			if(adminLevel.isAtLeast(Group.AdminLevel.ADMIN)){
 				jsLangKey(req, "update_avatar_title", "update_avatar_intro_group", "update_avatar_formats", "update_avatar_footer", "update_avatar_crop_title_group", "update_avatar_crop_explanation1_group",
 						"update_avatar_crop_explanation2", "update_avatar_thumb_title", "update_avatar_thumb_explanation1", "update_avatar_thumb_explanation2_group", "choose_file", "save_and_continue", "go_back",
 						"remove_profile_picture", "confirm_remove_profile_picture_group");
@@ -273,6 +243,112 @@ public class GroupsRoutes{
 			model.with("isBookmarked", ctx.getBookmarksController().isGroupBookmarked(self.user, group));
 			ctx.getGroupsController().incrementHintsRank(self.user, group, 1);
 		}else{
+			adminLevel=null;
+		}
+		HashSet<Integer> needUsers=new HashSet<>(), needGroups=new HashSet<>();
+
+		if(group.banInfo!=null && group.banInfo.message()!=null && adminLevel!=null && adminLevel.isAtLeast(Group.AdminLevel.MODERATOR)){
+			try{
+				ctx.getPrivacyController().enforceUserAccessToGroupProfile(self.user, group);
+			}catch(UserErrorException x){
+				throw new UserErrorException(l.get(x.getMessage())+"\n\n"+l.get("admin_group_ban_message")+": "+TextProcessor.escapeHTML(group.banInfo.message()));
+			}
+		}else{
+			ctx.getPrivacyController().enforceUserAccessToGroupProfile(self==null ? null : self.user, group);
+		}
+
+		if(group.banStatus!=GroupBanStatus.NONE && group.banInfo!=null){
+			if(group.banStatus==GroupBanStatus.SUSPENDED)
+				model.with("deletionTime", group.banInfo.bannedAt().plus(GroupBanInfo.GROUP_DELETION_DAYS, ChronoUnit.DAYS));
+			if(group.banInfo.moderatorID()!=0)
+				needUsers.add(group.banInfo.moderatorID());
+		}
+
+		// Public info: still visible for non-members in public groups
+		List<User> members=ctx.getGroupsController().getRandomMembersForProfile(group, false);
+		model.with("group", group).with("members", members);
+		if(group.isEvent())
+			model.with("tentativeMembers", ctx.getGroupsController().getRandomMembersForProfile(group, true));
+		model.with("title", group.name);
+		List<GroupAdmin> admins=ctx.getGroupsController().getAdmins(group);
+		model.with("canAccessContent", canAccessContent);
+		for(GroupAdmin admin:admins){
+			needUsers.add(admin.userID);
+		}
+
+		int wallPostsCount=0;
+		if(canAccessContent){
+			// Wall posts
+			if(group.wallState!=GroupFeatureState.DISABLED){
+				int offset=offset(req);
+				PaginatedList<PostViewModel> wall=PostViewModel.wrap(ctx.getWallController().getWallPosts(self!=null ? self.user : null, group, false, offset, 20));
+				wallPostsCount=wall.total;
+				ctx.getWallController().populateReposts(self!=null ? self.user : null, wall.list, 2);
+				CommentViewType viewType=self!=null ? self.prefs.commentViewType : CommentViewType.THREADED;
+				if(req.attribute("mobile")==null){
+					ctx.getWallController().populateCommentPreviews(self!=null ? self.user : null, wall.list, viewType);
+				}
+				Map<Integer, UserInteractions> interactions=ctx.getWallController().getUserInteractions(wall.list, self!=null ? self.user : null);
+				model.with("postCount", wall.total)
+						.paginate(wall, "/groups/"+group.id+"/wall?offset=", null)
+						.with("canPostOnWall", self!=null && switch(group.wallState){
+							case ENABLED_OPEN -> true;
+							case ENABLED_RESTRICTED, ENABLED_CLOSED -> adminLevel.isAtLeast(Group.AdminLevel.MODERATOR);
+							case DISABLED -> false;
+						})
+						.with("canSeeOthersPosts", true);
+				model.with("postInteractions", interactions);
+				PostViewModel.collectActorIDs(wall.list, needUsers, needGroups);
+				model.with("maxReplyDepth", PostRoutes.getMaxReplyDepth(self)).with("commentViewType", viewType);
+			}
+
+			// Photo albums
+			if(group.photosState!=GroupFeatureState.DISABLED){
+				PaginatedList<PhotoAlbum> albums;
+				if(isMobile(req))
+					albums=ctx.getPhotosController().getMostRecentAlbums(group, self!=null ? self.user : null, 1, true);
+				else
+					albums=ctx.getPhotosController().getRandomAlbumsForProfile(group, self!=null ? self.user : null, 2);
+				model.with("albums", albums.list)
+						.with("photoAlbumCount", albums.total)
+						.with("covers", ctx.getPhotosController().getPhotosIgnoringPrivacy(albums.list.stream().map(a->a.coverID).filter(id->id!=0).collect(Collectors.toSet())));
+			}
+
+			// Board topics
+			if(group.boardState!=GroupFeatureState.DISABLED){
+				PaginatedList<BoardTopic> topics=ctx.getBoardController().getTopicsIgnoringPrivacy(group, 0, 3, BoardTopicsSortOrder.UPDATED_DESC);
+				for(BoardTopic t:topics.list){
+					needUsers.add(t.lastCommentAuthorID);
+				}
+				model.with("boardTopics", topics);
+				model.with("canCreateTopics", self!=null && (group.boardState==GroupFeatureState.ENABLED_OPEN || (group.boardState==GroupFeatureState.ENABLED_RESTRICTED && adminLevel.isAtLeast(Group.AdminLevel.MODERATOR))));
+			}
+
+			List<GroupLink> links=ctx.getGroupsController().getLinks(group);
+			model.with("links", links);
+			for(GroupLink link:links){
+				if(link.object!=null){
+					if(link.object.type()==ObjectLinkResolver.ObjectType.USER)
+						needUsers.add(link.object.idInt());
+					else if(link.object.type()==ObjectLinkResolver.ObjectType.GROUP)
+						needGroups.add(link.object.idInt());
+				}
+			}
+
+		}
+
+		Map<Integer, User> users=ctx.getUsersController().getUsers(needUsers);
+		model.with("users", users)
+				.with("groups", ctx.getGroupsController().getGroupsByIdAsMap(needGroups));
+
+		model.with("admins", admins.stream().map(a->Map.of("user", users.get(a.userID), "title", a.title==null ? "" : a.title)).toList());
+
+		if(group instanceof ForeignGroup)
+			model.with("noindex", true);
+
+		jsLangKey(req, "yes", "no", "delete_post", "delete_post_confirm", "delete_reply", "delete_reply_confirm", "remove_friend", "cancel", "delete");
+		Templates.addJsLangForNewPostForm(req);
+		if(self==null){
 			HashMap<String, String> meta=new LinkedHashMap<>();
 			meta.put("og:type", "profile");
 			meta.put("og:site_name", Config.serverDisplayName);
@@ -309,6 +385,14 @@ public class GroupsRoutes{
 		ArrayList<PropertyValue> profileFields=new ArrayList<>();
 		if(StringUtils.isNotEmpty(group.summary))
 			profileFields.add(new PropertyValue(l.get(group.type==Group.Type.EVENT ? "about_event" : "about_group"), group.summary));
+		if(!isMobile(req)){
+			if(StringUtils.isNotEmpty(group.website)){
+				String escaped=TextProcessor.escapeHTML(group.website);
+				profileFields.add(new PropertyValue(l.get("group_website"), "<a href=\""+escaped+"\">"+escaped+"</a>"));
+			}
+			if(StringUtils.isNotEmpty(group.location))
+				profileFields.add(new PropertyValue(l.get("event_location"), group.location));
+		}
 		if(group.type==Group.Type.EVENT){
 			profileFields.add(new PropertyValue(l.get("event_start_time"), l.formatDate(group.eventStartTime, timeZoneForRequest(req), false)));
 			if(group.eventEndTime!=null)
@@ -360,7 +444,8 @@ public class GroupsRoutes{
 			model.with("groupEditMessage", s.attribute("settings.groupEditMessage"));
 			s.removeAttribute("settings.groupEditMessage");
 		}
-		return model;
+		return model
+				.headerBack(group);
 	}
 
 	public static Object saveGeneral(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -369,7 +454,7 @@ public class GroupsRoutes{
 		Group.AccessType accessType=enumValue(req.queryParams("access"), Group.AccessType.class);
 		String message;
 		try{
-			if(StringUtils.isEmpty(name) || name.length()<1)
+			if(StringUtils.isEmpty(name))
 				throw new BadRequestException(lang(req).get("group_name_too_short"));
 
 			Instant eventStart=null, eventEnd=null;
@@ -387,15 +472,25 @@ public class GroupsRoutes{
 				}
 				if(eventEnd!=null && eventStart.isAfter(eventEnd))
 					throw new BadRequestException(lang(req).get("err_event_end_time_before_start"));
+				if(!eventStart.equals(group.eventStartTime) && (eventStart.isBefore(Instant.now()) || !isWithinDatabaseLimits(eventStart)))
+					throw new BadRequestException();
+				if(eventEnd!=null && !isWithinDatabaseLimits(eventEnd))
+					throw new BadRequestException();
 			}
 
 			if(StringUtils.isEmpty(about))
 				about=null;
 
-			ctx.getGroupsController().updateGroupInfo(group, self.user, name, about, eventStart, eventEnd, username, accessType);
+			GroupFeatureState wallState=enumValue(req.queryParams("wallState"), GroupFeatureState.class);
+			GroupFeatureState photosState=enumValue(req.queryParams("photosState"), GroupFeatureState.class);
+			GroupFeatureState boardState=enumValue(req.queryParams("boardState"), GroupFeatureState.class);
+			String website=req.queryParams("website");
+			String location=req.queryParams("location");
+			ctx.getGroupsController().updateGroupInfo(group, self.user, name, about, eventStart, eventEnd, username, accessType, wallState, photosState, boardState, website, location);
 
 			message=lang(req).get(group.isEvent() ? "event_info_updated" : "group_info_updated");
 		}catch(BadRequestException x){
+			LOG.debug("Bad request when saving group info", x);
 			message=x.getMessage();
 		}
 		if(isAjax(req)){
@@ -438,15 +533,19 @@ public class GroupsRoutes{
 							.collect(Collectors.toMap(p->p.ownerID, p->new PhotoViewerInlineData(0, "albums/"+XTEA.encodeObjectID(p.albumID, ObfuscatedObjectIDType.PHOTO_ALBUM), p.image.getURLsForPhotoViewer())))
 					);
 		}
-		return model;
+		return model
+				.headerBack(group);
 	}
 
 	public static Object admins(Request req, Response resp){
 		Group group=getGroup(req);
 		SessionInfo info=sessionInfo(req);
-		context(req).getPrivacyController().enforceUserAccessToGroupProfile(info!=null && info.account!=null ? info.account.user : null, group);
+		ApplicationContext ctx=context(req);
+		ctx.getPrivacyController().enforceUserAccessToGroupProfile(info!=null && info.account!=null ? info.account.user : null, group);
 		RenderedTemplateResponse model=new RenderedTemplateResponse("actor_list", req);
-		model.with("actors", context(req).getGroupsController().getAdmins(group).stream().map(a->new ActorWithDescription(a.user, a.title)).collect(Collectors.toList()));
+		List<GroupAdmin> admins=ctx.getGroupsController().getAdmins(group);
+		Map<Integer, User> users=ctx.getUsersController().getUsers(admins.stream().map(a->a.userID).toList());
+		model.with("actors", admins.stream().map(a->new ActorWithDescription(users.get(a.userID), a.title)).collect(Collectors.toList()));
 		if(group instanceof ForeignGroup)
 			model.with("noindex", true);
 		if(isAjax(req)){
@@ -459,11 +558,14 @@ public class GroupsRoutes{
 		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
 		RenderedTemplateResponse model=new RenderedTemplateResponse("group_edit_admins", req);
 		model.with("group", group).with("title", group.name);
-		model.with("admins", ctx.getGroupsController().getAdmins(group));
+		List<GroupAdmin> admins=ctx.getGroupsController().getAdmins(group);
+		model.with("admins", admins);
+		model.with("users", ctx.getUsersController().getUsers(admins.stream().map(a->a.userID).collect(Collectors.toSet())));
 		model.with("subtab", "admins");
 		model.with("joinRequestCount", ctx.getGroupsController().getJoinRequestCount(self.user, group));
 		jsLangKey(req, "cancel", "group_admin_demote", "yes", "no");
-		return model;
+		return model
+				.headerBack(group);
 	}
 
 	public static Object editMembers(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -474,14 +576,15 @@ public class GroupsRoutes{
 		Map<Integer, User> users=ctx.getUsersController().getUsers(ids.list);
 		model.paginate(new PaginatedList<User>(ids, ids.list.stream().map(users::get).toList()));
 		model.with("group", group).with("title", group.name);
-		model.with("adminIDs", ctx.getGroupsController().getAdmins(group).stream().map(adm->adm.user.id).collect(Collectors.toList()));
+		model.with("adminIDs", ctx.getGroupsController().getAdmins(group).stream().map(adm->adm.userID).collect(Collectors.toList()));
 		model.with("canAddAdmins", level.isAtLeast(Group.AdminLevel.ADMIN));
 		model.with("adminLevel", level);
 		model.with("subtab", "all");
 		model.with("summaryKey", group.isEvent() ? "summary_event_X_members" : "summary_group_X_members");
 		model.with("joinRequestCount", ctx.getGroupsController().getJoinRequestCount(self.user, group));
 		jsLangKey(req, "cancel", "yes", "no");
-		return model;
+		return model
+				.headerBack(group);
 	}
 
 	public static Object editAdminForm(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -513,12 +616,12 @@ public class GroupsRoutes{
 			}
 		}
 
-		ctx.getGroupsController().addOrUpdateAdmin(group, user, title, lvl);
+		ctx.getGroupsController().addOrUpdateAdmin(group, self.user, user, title, lvl);
 
 		if(isAjax(req)){
 			return new WebDeltaResponse(resp).refresh();
 		}
-		resp.redirect(Utils.back(req));
+		resp.redirect(back(req));
 		return "";
 	}
 
@@ -526,8 +629,8 @@ public class GroupsRoutes{
 		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
 		int userID=safeParseInt(req.queryParams("id"));
 		User user=ctx.getUsersController().getUserOrThrow(userID);
-		String back=Utils.back(req);
-		return new RenderedTemplateResponse("generic_confirm", req).with("message", Utils.lang(req).get("group_admin_demote_confirm", Map.of("name", user.getFirstLastAndGender()))).with("formAction", Config.localURI("/groups/"+group.id+"/removeAdmin?_redir="+URLEncoder.encode(back)+"&id="+userID)).with("back", back);
+		String back=back(req);
+		return new RenderedTemplateResponse("generic_confirm", req).with("message", lang(req).get("group_admin_demote_confirm", Map.of("name", user.getFirstLastAndGender()))).with("formAction", Config.localURI("/groups/"+group.id+"/removeAdmin?_redir="+URLEncoder.encode(back)+"&id="+userID)).with("back", back);
 	}
 
 	public static Object removeAdmin(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -535,12 +638,12 @@ public class GroupsRoutes{
 		int userID=safeParseInt(req.queryParams("id"));
 		User user=ctx.getUsersController().getUserOrThrow(userID);
 
-		ctx.getGroupsController().removeAdmin(group, user);
+		ctx.getGroupsController().removeAdmin(group, self.user, user);
 
 		if(isAjax(req)){
 			return new WebDeltaResponse(resp).refresh();
 		}
-		resp.redirect(Utils.back(req));
+		resp.redirect(back(req));
 		return "";
 	}
 
@@ -565,7 +668,8 @@ public class GroupsRoutes{
 		model.with("group", group);
 		model.with("adminLevel", level);
 		jsLangKey(req, "unblock", "yes", "no", "cancel");
-		return model;
+		return model
+				.headerBack(group);
 	}
 
 	public static Object blockDomainForm(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -587,8 +691,8 @@ public class GroupsRoutes{
 	public static Object confirmUnblockDomain(Request req, Response resp, Account self, ApplicationContext ctx){
 		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.MODERATOR);
 		String domain=req.queryParams("domain");
-		Lang l=Utils.lang(req);
-		String back=Utils.back(req);
+		Lang l=lang(req);
+		String back=back(req);
 		return new RenderedTemplateResponse("generic_confirm", req).with("message", l.get("confirm_unblock_domain_X", Map.of("domain", domain))).with("formAction", "/groups/"+group.id+"/unblockDomain?domain="+domain+"_redir="+URLEncoder.encode(back)).with("back", back);
 	}
 
@@ -610,16 +714,16 @@ public class GroupsRoutes{
 	public static Object confirmBlockUser(Request req, Response resp, Account self, ApplicationContext ctx){
 		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.MODERATOR);
 		User user=getUserOrThrow(req);
-		Lang l=Utils.lang(req);
-		String back=Utils.back(req);
+		Lang l=lang(req);
+		String back=back(req);
 		return new RenderedTemplateResponse("generic_confirm", req).with("message", l.get("confirm_block_user_X", Map.of("name", user.getFirstLastAndGender()))).with("formAction", "/groups/"+group.id+"/blockUser?id="+user.id+"&_redir="+URLEncoder.encode(back)).with("back", back);
 	}
 
 	public static Object confirmUnblockUser(Request req, Response resp, Account self, ApplicationContext ctx){
 		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.MODERATOR);
 		User user=getUserOrThrow(req);
-		Lang l=Utils.lang(req);
-		String back=Utils.back(req);
+		Lang l=lang(req);
+		String back=back(req);
 		return new RenderedTemplateResponse("generic_confirm", req).with("message", l.get("confirm_unblock_user_X", Map.of("name", user.getFirstLastAndGender()))).with("formAction", "/groups/"+group.id+"/unblockUser?id="+user.id+"&_redir="+URLEncoder.encode(back)).with("back", back);
 	}
 
@@ -670,7 +774,7 @@ public class GroupsRoutes{
 		}
 
 		int month=safeParseInt(req.queryParams("month"));
-		int year=safeParseInt(req.queryParams("year"));
+		int year=Math.min(Math.max(safeParseInt(req.queryParams("year")), today.getYear()-25), today.getYear()+25);
 		LocalDate monthStart;
 		if(month<1 || month>12 || year==0){
 			monthStart=LocalDate.now(timeZone).withDayOfMonth(1);
@@ -715,62 +819,6 @@ public class GroupsRoutes{
 		if(isAjax(req)){
 			return new WebDeltaResponse(resp).setContent("eventsCalendarW", model.renderToString());
 		}
-
-		return model;
-	}
-
-	public static Object eventCalendarMobile(Request req, Response resp, Account self, ApplicationContext ctx){
-		RenderedTemplateResponse model=new RenderedTemplateResponse("events_calendar", req);
-		Lang l=lang(req);
-		Instant now=Instant.now();
-		ZoneId timeZone=timeZoneForRequest(req);
-		LocalDate today=LocalDate.now(timeZone);
-		int month=safeParseInt(req.queryParams("month"));
-		int year=safeParseInt(req.queryParams("year"));
-		LocalDate monthStart;
-		if(month<1 || month>12 || year==0){
-			monthStart=LocalDate.now(timeZone).withDayOfMonth(1);
-			month=monthStart.getMonthValue();
-			year=monthStart.getYear();
-		}else{
-			monthStart=LocalDate.of(year, month, 1);
-		}
-		model.with("month", month).with("year", year);
-		ArrayList<Actor> eventsInMonth=new ArrayList<>();
-		eventsInMonth.addAll(ctx.getUsersController().getFriendsWithBirthdaysInMonth(self.user, month));
-		eventsInMonth.addAll(ctx.getGroupsController().getUserEventsInMonth(self.user, year, month, timeZone));
-		List<ActorWithDescription> actors=eventsInMonth.stream().sorted((a1, a2)->{
-			LocalDate date1, date2;
-			if(a1 instanceof User u)
-				date1=u.birthDate;
-			else if(a1 instanceof Group g)
-				date1=g.eventStartTime.atZone(timeZone).toLocalDate();
-			else
-				throw new IllegalStateException();
-			if(a2 instanceof User u)
-				date2=u.birthDate;
-			else if(a2 instanceof Group g)
-				date2=g.eventStartTime.atZone(timeZone).toLocalDate();
-			else
-				throw new IllegalStateException();
-			if(date1.equals(date2)){
-				if(a1 instanceof User && a2 instanceof Group){
-					return -1;
-				}else if(a1 instanceof Group && a2 instanceof User){
-					return 1;
-				}else if(a1 instanceof User u1 && a2 instanceof User u2){
-					return Integer.compare(u1.id, u2.id);
-				}else if(a1 instanceof Group g1 && a2 instanceof Group g2){
-					return g1.eventStartTime.compareTo(g2.eventStartTime);
-				}else{
-					throw new IllegalStateException();
-				}
-			}else{
-				return date1.compareTo(date2);
-			}
-		}).map(a->new ActorWithDescription(a, getActorCalendarDescription(a, l, today, monthStart, now, timeZone))).toList();
-		model.with("actors", actors);
-		model.pageTitle(lang(req).get("events_calendar_title"));
 
 		return model;
 	}
@@ -898,8 +946,8 @@ public class GroupsRoutes{
 	public static Object confirmRemoveUser(Request req, Response resp, Account self, ApplicationContext ctx){
 		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.MODERATOR);
 		User user=getUserOrThrow(req);
-		Lang l=Utils.lang(req);
-		String back=Utils.back(req);
+		Lang l=lang(req);
+		String back=back(req);
 		return new RenderedTemplateResponse("generic_confirm", req).with("message", l.get("confirm_remove_user_X", Map.of("name", user.getFirstLastAndGender()))).with("formAction", "/groups/"+group.id+"/removeUser?id="+user.id+"&_redir="+URLEncoder.encode(back)).with("back", back);
 	}
 
@@ -929,7 +977,8 @@ public class GroupsRoutes{
 				Map.of("href", "/groups/"+group.id+"/rejectJoinRequest?csrf="+csrf+"&id=", "title", lang(req).get("group_reject_join_request"))
 		));
 		model.pageTitle(group.name);
-		return model;
+		return model
+				.headerBack(group);
 	}
 
 	public static Object acceptJoinRequest(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -972,7 +1021,8 @@ public class GroupsRoutes{
 		));
 		model.pageTitle(group.name);
 		jsLangKey(req, "cancel");
-		return model;
+		return model
+				.headerBack(group);
 	}
 
 	public static Object editCancelInvitation(Request req, Response resp, Account self, ApplicationContext ctx){
@@ -1036,5 +1086,227 @@ public class GroupsRoutes{
 			}
 			return wdr;
 		}
+	}
+
+	public static Object editLinks(Request req, Response resp, Account self, ApplicationContext ctx){
+		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
+		List<GroupLink> links=ctx.getGroupsController().getLinks(group);
+		Set<Integer> needUsers=links.stream()
+				.map(l->l.object)
+				.filter(o->o!=null && o.type()==ObjectLinkResolver.ObjectType.USER)
+				.map(ObjectLinkResolver.ObjectTypeAndID::idInt)
+				.collect(Collectors.toSet());
+		Set<Integer> needGroups=links.stream()
+				.map(l->l.object)
+				.filter(o->o!=null && o.type()==ObjectLinkResolver.ObjectType.GROUP)
+				.map(ObjectLinkResolver.ObjectTypeAndID::idInt)
+				.collect(Collectors.toSet());
+		RenderedTemplateResponse model=new RenderedTemplateResponse("group_edit_links", req)
+				.with("group", group)
+				.with("links", links)
+				.with("users", ctx.getUsersController().getUsers(needUsers))
+				.with("groups", ctx.getGroupsController().getGroupsByIdAsMap(needGroups))
+				.pageTitle(group.name)
+				.headerBack(group);
+
+		if("added".equals(req.session().attribute("groupLinksMessage"+group.id))){
+			req.session().removeAttribute("groupLinksMessage"+group.id);
+			Lang l=lang(req);
+			model.with("message", l.get("group_link_added"))
+					.with("messageSubtitle", l.get("group_link_added_explanation"));
+		}
+
+		return model;
+	}
+
+	public static Object addLinkURLForm(Request req, Response resp, Account self, ApplicationContext ctx){
+		RenderedTemplateResponse model=new RenderedTemplateResponse("group_add_link_url_form", req);
+		return wrapForm(req, resp, "group_add_link_url_form", "/groups/"+req.params(":id")+"/addLinkForm", lang(req).get("group_add_link_title"), "next", model);
+	}
+
+	public static Object addLinkForm(Request req, Response resp, Account self, ApplicationContext ctx){
+		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
+		requireQueryParams(req, "url");
+		String rawURL=req.queryParams("url").trim().replace(" ", "%20");
+		if(!rawURL.startsWith("https:") && !rawURL.startsWith("http:"))
+			rawURL="https://"+rawURL;
+		URI url;
+		try{
+			url=new URI(rawURL);
+		}catch(URISyntaxException x){
+			throw new BadRequestException();
+		}
+		GroupLinkParseResult res=ctx.getGroupsController().parseLink(url, self.user, group);
+		req.session().attribute("groupAddLinkParsed_"+group.id+"_"+rawURL, res);
+		Lang l=lang(req);
+
+		Actor actor=null;
+		String objectTitle=null;
+		if(res.apObject() instanceof ObjectLinkResolver.ObjectTypeAndID(ObjectLinkResolver.ObjectType type, long id)){
+			actor=switch(type){
+				case USER -> ctx.getUsersController().getUserOrThrow((int)id);
+				case GROUP -> ctx.getGroupsController().getGroupOrThrow((int)id);
+				default -> null;
+			};
+			objectTitle=switch(type){
+				case USER, GROUP -> actor.getName();
+				case POST -> l.get("content_type_post");
+				case PHOTO_ALBUM -> l.get("photo_album");
+				case PHOTO -> l.get("content_type_photo");
+				case COMMENT -> l.get("content_type_comment");
+				case BOARD_TOPIC -> l.get("board_topic");
+				default -> null;
+			};
+		}
+
+		RenderedTemplateResponse model=new RenderedTemplateResponse("group_add_link_form", req)
+				.with("actor", actor)
+				.with("objectTitle", objectTitle)
+				.with("pageTitle", res.title())
+				.with("image", res.image())
+				.with("domain", url.getHost())
+				.with("url", url.toString());
+		Object responseObj=wrapForm(req, resp, "group_add_link_form", "/groups/"+group.id+"/finishAddingLink", l.get("group_add_link_title"), "group_do_add_link", model);
+		if(responseObj instanceof WebDeltaResponse wdr)
+			wdr.runScript("ge('linkTitleField').focus();");
+		return responseObj;
+	}
+
+	public static Object finishAddingLink(Request req, Response resp, Account self, ApplicationContext ctx){
+		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
+		requireQueryParams(req, "url");
+		String rawURL=req.queryParams("url");
+		if(!rawURL.startsWith("https:") && !rawURL.startsWith("http:"))
+			throw new BadRequestException();
+		URI url=URI.create(rawURL);
+		GroupLinkParseResult res=req.session().attribute("groupAddLinkParsed_"+group.id+"_"+rawURL);
+		if(res==null)
+			res=ctx.getGroupsController().parseLink(url, self.user, group);
+		req.session().removeAttribute("groupAddLinkParsed_"+group.id+"_"+rawURL);
+
+		String title=req.queryParams("title");
+		if(StringUtils.isEmpty(title))
+			title=res.title();
+		if(title==null)
+			title="";
+		ctx.getGroupsController().addLink(self.user, group, url, res, title);
+
+		req.session().attribute("groupLinksMessage"+group.id, "added");
+		if(isAjax(req))
+			return new WebDeltaResponse(resp).refresh();
+		resp.redirect(back(req));
+		return "";
+	}
+
+	public static Object editLinksReorder(Request req, Response resp, Account self, ApplicationContext ctx){
+		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
+		long id=safeParseLong(req.queryParams("id"));
+		int order=parseIntOrDefault(req.queryParams("order"), 0);
+		if(order<0)
+			throw new BadRequestException();
+
+		ctx.getGroupsController().setLinkOrder(group, ctx.getGroupsController().getLink(group, id), order);
+
+		return "";
+	}
+
+	public static Object editLink(Request req, Response resp, Account self, ApplicationContext ctx){
+		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
+		long id=safeParseLong(req.params(":linkID"));
+		GroupLink link=ctx.getGroupsController().getLink(group, id);
+		Lang l=lang(req);
+
+		Actor actor=null;
+		String objectTitle=null;
+		if(link.object!=null){
+			actor=switch(link.object.type()){
+				case USER -> ctx.getUsersController().getUserOrThrow(link.object.idInt());
+				case GROUP -> ctx.getGroupsController().getGroupOrThrow(link.object.idInt());
+				default -> null;
+			};
+			if(actor==null)
+				objectTitle=l.get(link.getTitleLangKey());
+			else
+				objectTitle=actor.getName();
+		}
+
+		RenderedTemplateResponse model=new RenderedTemplateResponse("group_add_link_form", req)
+				.with("actor", actor)
+				.with("objectTitle", objectTitle)
+				.with("pageTitle", link.title)
+				.with("image", actor!=null ? actor.getAvatar() : link.getImage())
+				.with("domain", link.url.getHost())
+				.with("url", link.url.toString())
+				.with("requireTitle", true);
+		Object responseObj=wrapForm(req, resp, "group_add_link_form", "/groups/"+group.id+"/links/"+id+"/update", l.get("group_edit_link_title"), "save", model);
+		if(responseObj instanceof WebDeltaResponse wdr)
+			wdr.runScript("ge('linkTitleField').focus();");
+		return responseObj;
+	}
+
+	public static Object updateLink(Request req, Response resp, Account self, ApplicationContext ctx){
+		requireQueryParams(req, "title");
+		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
+		long id=safeParseLong(req.params(":linkID"));
+		GroupLink link=ctx.getGroupsController().getLink(group, id);
+
+		ctx.getGroupsController().updateLinkTitle(group, link, req.queryParams("title"));
+
+		if(isAjax(req))
+			return new WebDeltaResponse(resp).refresh();
+		resp.redirect(back(req));
+		return "";
+	}
+
+	public static Object confirmDeleteLink(Request req, Response resp, Account self, ApplicationContext ctx){
+		Lang l=lang(req);
+		return wrapConfirmation(req, resp, l.get("group_delete_link_title"), l.get("group_delete_link_confirm"), "/groups/"+req.params(":id")+"/links/"+req.params(":linkID")+"/delete");
+	}
+
+	public static Object deleteLink(Request req, Response resp, Account self, ApplicationContext ctx){
+		Group group=getGroupAndRequireLevel(req, self, Group.AdminLevel.ADMIN);
+		long id=safeParseLong(req.params(":linkID"));
+		GroupLink link=ctx.getGroupsController().getLink(group, id);
+
+		ctx.getGroupsController().deleteLink(group, link);
+
+		if(isAjax(req))
+			return new WebDeltaResponse(resp).refresh();
+		resp.redirect(back(req));
+		return "";
+	}
+
+	public static Object groupLinks(Request req, Response resp){
+		Group group=getGroup(req);
+		if(isMobile(req)){
+			resp.redirect(group.getProfileURL());
+			return "";
+		}
+		ApplicationContext ctx=context(req);
+		Account self=currentUserAccount(req);
+		context(req).getPrivacyController().enforceUserAccessToGroupProfile(self==null ? null : self.user, group);
+
+		List<GroupLink> links=ctx.getGroupsController().getLinks(group);
+		Set<Integer> needUsers=links.stream()
+				.map(l->l.object)
+				.filter(o->o!=null && o.type()==ObjectLinkResolver.ObjectType.USER)
+				.map(ObjectLinkResolver.ObjectTypeAndID::idInt)
+				.collect(Collectors.toSet());
+		Set<Integer> needGroups=links.stream()
+				.map(l->l.object)
+				.filter(o->o!=null && o.type()==ObjectLinkResolver.ObjectType.GROUP)
+				.map(ObjectLinkResolver.ObjectTypeAndID::idInt)
+				.collect(Collectors.toSet());
+
+		RenderedTemplateResponse model=new RenderedTemplateResponse("group_links", req);
+		model.with("links", links)
+				.with("users", ctx.getUsersController().getUsers(needUsers))
+				.with("groups", ctx.getGroupsController().getGroupsByIdAsMap(needGroups));
+		if(group instanceof ForeignGroup)
+			model.with("noindex", true);
+		if(isAjax(req)){
+			return new WebDeltaResponse(resp).box(lang(req).get("group_links"), model.renderContentBlock(), null, true);
+		}
+		return model;
 	}
 }
